--- a/Ix.NET/Source/System.Interactive.Async.Providers/project.json
+++ b/Ix.NET/Source/System.Interactive.Async.Providers/project.json
@@ -1,52 +1,53 @@
 ﻿{
-    "version": "2.0.0-*",
-    "title": "Interactive Extensions - Async Providers Library",
-    "description": "Interactive Extensions Async Providers Library used to build query providers and express queries over async enumerable sequences.",
-    "authors": [ "Microsoft" ],
-    "copyright": "Copyright (C) Microsoft Corporation",
-    "tags": [ "Ix", "Interactive", "Extensions", "Enumerable", "Asynchronous" ],
+  "version": "2.0.0-*",
+  "title": "Interactive Extensions - Async Providers Library",
+  "description":
+    "Interactive Extensions Async Providers Library used to build query providers and express queries over async enumerable sequences.",
+  "authors": ["Microsoft"],
+  "copyright": "Copyright (C) Microsoft Corporation",
+  "packOptions": {
+    "tags": ["Ix", "Interactive", "Extensions", "Enumerable", "Asynchronous"],
     "iconUrl": "http://go.microsoft.com/fwlink/?LinkId=261274",
     "projectUrl": "https://github.com/Reactive-Extensions/Rx.NET",
     "licenseUrl": "https://raw.githubusercontent.com/Reactive-Extensions/Rx.NET/master/Ix.NET/Source/license.txt",
-    "requireLicenseAcceptance": true,
-    "dependencies": {
-        "System.Interactive.Async": { "target": "project" }
-    },
-    "frameworks": {
-        "net40": {
-            "compilationOptions": {
-                "define": [
-                    "HAS_APTCA",
-                    "DESKTOPCLR",
-                    "DESKTOPCLR40"
-                ]
-            }
-        },
-        "net45": {
-            "compilationOptions": {
-                "define": [
-                    "HAS_AWAIT",
-                    "HAS_APTCA",
-                    "DESKTOPCLR",
-                    "DESKTOPCLR45"
-                ]
-            }
-        },
-      "netstandard1.0": {
-        "compilationOptions": {
-          "define": [
-            "HAS_AWAIT",
-            "CRIPPLED_REFLECTION",
-            "PLIB"
-          ]
-        },
-        "imports": [ "dnxcore50", "portable-net45+win8" ],
-        "dependencies": {
-          "System.Linq.Expressions": "4.0.11-rc2-23811",
-          "System.Linq.Queryable": "4.0.1-rc2-23811",
-          "System.Reflection": "4.1.0-rc2-23811"
-        }
+    "requireLicenseAcceptance": true
+  },
 
+  "dependencies": {
+    "System.Interactive.Async": { "target": "project" }
+  },
+  "frameworks": {
+    "net40": {
+      "buildOptions": {
+        "define": [
+          "HAS_APTCA",
+          "DESKTOPCLR",
+          "DESKTOPCLR40"
+        ]
+      }
+    },
+    "net45": {
+      "buildOptions": {
+        "define": [
+          "HAS_AWAIT",
+          "HAS_APTCA",
+          "DESKTOPCLR",
+          "DESKTOPCLR45"
+        ]
+      }
+    },
+    "netstandard1.0": {
+      "buildOptions": {
+        "define": [
+          "HAS_AWAIT",
+          "CRIPPLED_REFLECTION",
+          "PLIB"
+        ]
+      },
+      "dependencies": {
+        "System.Linq.Expressions": "4.0.11-rc2-24027",
+        "System.Linq.Queryable": "4.0.1-rc2-24027"
       }
     }
+  }
 }
