--- a/Ix.NET/Source/System.Interactive.Async/project.json
+++ b/Ix.NET/Source/System.Interactive.Async/project.json
@@ -1,63 +1,65 @@
 ﻿{
-    "version": "2.0.0-*",
-    "title": "Interactive Extensions - Async Library",
-    "description":
-        "Interactive Extensions Async Library used to express queries over asynchronous enumerable sequences.",
-    "authors": ["Microsoft"],
-    "copyright": "Copyright (C) Microsoft Corporation",
+  "version": "2.0.0-*",
+  "title": "Interactive Extensions - Async Library",
+  "description":
+    "Interactive Extensions Async Library used to express queries over asynchronous enumerable sequences.",
+  "authors": ["Microsoft"],
+  "copyright": "Copyright (C) Microsoft Corporation",
+  "packOptions": {
     "tags": ["Ix", "Interactive", "Extensions", "Enumerable", "Asynchronous"],
     "iconUrl": "http://go.microsoft.com/fwlink/?LinkId=261274",
     "projectUrl": "https://github.com/Reactive-Extensions/Rx.NET",
     "licenseUrl": "https://raw.githubusercontent.com/Reactive-Extensions/Rx.NET/master/Ix.NET/Source/license.txt",
-    "requireLicenseAcceptance": true,
-    "frameworks": {
-        "net40": {
-            "compilationOptions": {
-                "define": [
-                    "HAS_APTCA",
-                    "DESKTOPCLR",
-                    "DESKTOPCLR40"
-                ]
-            }
-        },
-        "net45": {
-            "compilationOptions": {
-                "define": [
-                    "HAS_AWAIT",
-                    "HAS_APTCA",
-                    "DESKTOPCLR",
-                    "DESKTOPCLR45"
-                ]
-            }
-        },
-        "netstandard1.0": {
-            "compilationOptions": {
-                "define": [
-                    "HAS_AWAIT",
-                    "CRIPPLED_REFLECTION",
-                    "PLIB"
-                ]
-            },
-            "imports": [ "dnxcore50", "portable-net45+win8" ],
-            "dependencies": {
-                "NETStandard.Library": "1.0.0-rc2-23811"
-            }
-        },
-        "sl5": {
-            "compilationOptions": {
-                "define": [
-                    "NO_SERIALIZABLE",
-                    "NO_TPL",
-                    "NO_REMOTING",
-                    "NO_SEMAPHORE",
-                    "NO_RXINTERFACES",
-                    "SILVERLIGHT",
-                    "SILVERLIGHT5"
-                ]
-            },
-            "dependencies": {
-                "Microsoft.TargetingPack.Private.Silverlight.v5": "1.0.2"
-            }
-        }
+    "requireLicenseAcceptance": true
+  },
+
+  "frameworks": {
+    "net40": {
+      "buildOptions": {
+        "define": [
+          "HAS_APTCA",
+          "DESKTOPCLR",
+          "DESKTOPCLR40"
+        ]
+      }
+    },
+    "net45": {
+      "buildOptions": {
+        "define": [
+          "HAS_AWAIT",
+          "HAS_APTCA",
+          "DESKTOPCLR",
+          "DESKTOPCLR45"
+        ]
+      }
+    },
+    "netstandard1.0": {
+      "buildOptions": {
+        "define": [
+          "HAS_AWAIT",
+          "CRIPPLED_REFLECTION",
+          "PLIB"
+        ]
+      },
+      "dependencies": {
+        "NETStandard.Library": "1.5.0-rc2-24027"
+      }
+    },
+    "sl5": {
+      "buildOptions": {
+        "define": [
+          "NO_SERIALIZABLE",
+          "NO_TPL",
+          "NO_REMOTING",
+          "NO_SEMAPHORE",
+          "NO_RXINTERFACES",
+          "SILVERLIGHT",
+          "SILVERLIGHT5"
+        ]
+      },
+      "dependencies": {
+        "Microsoft.TargetingPack.Private.Silverlight.v5": "1.0.2"
+      }
     }
+  }
 }
