--- a/Rx.NET/Source/NuSpecs/System.Reactive.Core.nuspec
+++ b/Rx.NET/Source/NuSpecs/System.Reactive.Core.nuspec
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2011/10/nuspec.xsd">
     <metadata>
-        <id>Rx-Core</id>
-        <version>2.3.0-beta2</version>
+        <id>System.Reactive.Core</id>
+        <version>$version$</version>
         <title>Reactive Extensions - Core Library</title>
         <authors>Microsoft</authors>
         <owners>Microsoft</owners>
@@ -15,12 +15,8 @@
         <language>en-US</language>
         <tags>Rx Reactive Extensions Observable LINQ Events</tags>
         <dependencies>
-            <dependency id="Rx-Interfaces" version="2.3.0-beta2" />
+            <dependency id="System.Reactive.Intefaces" version="$version$" />
         </dependencies>
-        <frameworkAssemblies>
-            <frameworkAssembly assemblyName="System.Observable" targetFramework="Silverlight4.0-WindowsPhone71" />
-            <frameworkAssembly assemblyName="Microsoft.Phone" targetFramework="Silverlight4.0-WindowsPhone71" />
-        </frameworkAssemblies>
     </metadata>
     <files>
         <file src="lib\net40\System.Reactive.Core.dll" target="lib\net40\System.Reactive.Core.dll" />
