--- a/Rx.NET/Source/NuSpecs/System.Reactive.Interfaces.nuspec
+++ b/Rx.NET/Source/NuSpecs/System.Reactive.Interfaces.nuspec
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2011/10/nuspec.xsd">
     <metadata>
-        <id>Rx-Interfaces</id>
-        <version>2.3.0-beta2</version>
+        <id>System.Reactive.Interfaces</id>
+        <version>$version$</version>
         <title>Reactive Extensions - Interfaces Library</title>
         <authors>Microsoft</authors>
         <owners>Microsoft</owners>
@@ -14,9 +14,6 @@
         <copyright>Copyright (C) Microsoft Corporation</copyright>
         <language>en-US</language>
         <tags>Rx Reactive Extensions Observable LINQ Events</tags>
-        <frameworkAssemblies>
-            <frameworkAssembly assemblyName="System.Observable" targetFramework="Silverlight4.0-WindowsPhone71" />
-        </frameworkAssemblies>
     </metadata>
     <files>
         <file src="lib\net40\System.Reactive.Interfaces.dll" target="lib\net40\System.Reactive.Interfaces.dll" />
