--- a/Rx.NET/Source/NuSpecs/System.Reactive.nuspec
+++ b/Rx.NET/Source/NuSpecs/System.Reactive.nuspec
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2011/10/nuspec.xsd">
     <metadata>
-        <id>Rx-Main</id>
-        <version>2.3.0-beta2</version>
+        <id>System.Reactive</id>
+        <version>$version$</version>
         <title>Reactive Extensions - Main Library</title>
         <authors>Microsoft</authors>
         <owners>Microsoft</owners>
@@ -15,10 +15,10 @@
         <language>en-US</language>
         <tags>Rx Reactive Extensions Observable LINQ Events</tags>
         <dependencies>
-            <dependency id="Rx-Interfaces" version="2.3.0-beta2" />
-            <dependency id="Rx-Core" version="2.3.0-beta2" />
-            <dependency id="Rx-Linq" version="2.3.0-beta2" />
-            <dependency id="Rx-PlatformServices" version="2.3.0-beta2" />
+            <dependency id="System.Reactive.Interfaces" version="$version$" />
+            <dependency id="System.Reactive.Core" version="$version$" />
+            <dependency id="System.Reactive.Linq" version="$version$" />
+            <dependency id="System.Reactive.PlatformServices" version="$version$" />
         </dependencies>
     </metadata>
     <files />
