--- a/Rx.NET/Source/NuSpecs/System.Reactive.Aliases.nuspec
+++ b/Rx.NET/Source/NuSpecs/System.Reactive.Aliases.nuspec
@@ -20,7 +20,6 @@
         </dependencies>
     </metadata>
     <files>
-        <file src="content\Observable.Aliases\Observable.Aliases.cs" target="content\Observable.Aliases\Observable.Aliases.cs" />
-        <file src="content\Observable.Aliases\Qbservable.Aliases.Generated.cs" target="content\Observable.Aliases\Qbservable.Aliases.Generated.cs" />
+        <file src="..\System.Reactive.Aliases\bin\$configuration$\**\*.*" target="lib" />
     </files>
 </package>
