--- a/Rx.NET/Source/NuSpecs/System.Reactive.Experimental.nuspec
+++ b/Rx.NET/Source/NuSpecs/System.Reactive.Experimental.nuspec
@@ -22,23 +22,6 @@
         </dependencies>
     </metadata>
     <files>
-        <file src="lib\net40\System.Reactive.Experimental.dll" target="lib\net40\System.Reactive.Experimental.dll" />
-        <file src="lib\net40\System.Reactive.Experimental.XML" target="lib\net40\System.Reactive.Experimental.XML" />
-        <file src="lib\net45\System.Reactive.Experimental.dll" target="lib\net45\System.Reactive.Experimental.dll" />
-        <file src="lib\net45\System.Reactive.Experimental.XML" target="lib\net45\System.Reactive.Experimental.XML" />
-        <file src="lib\net46\System.Reactive.Experimental.dll" target="lib\net46\System.Reactive.Experimental.dll" />
-        <file src="lib\net46\System.Reactive.Experimental.XML" target="lib\net46\System.Reactive.Experimental.XML" />
-        <file src="lib\portable-net40+sl5+win8+wp8\System.Reactive.Experimental.dll" target="lib\portable-net40+sl5+win8+wp8\System.Reactive.Experimental.dll" />
-        <file src="lib\portable-net40+sl5+win8+wp8\System.Reactive.Experimental.XML" target="lib\portable-net40+sl5+win8+wp8\System.Reactive.Experimental.XML" />
-        <file src="lib\portable-net45+netcore45+wpa81+wp8+MonoAndroid1+MonoTouch1\System.Reactive.Experimental.dll" target="lib\portable-net45+netcore45+wpa81+wp8+MonoAndroid1+MonoTouch1\System.Reactive.Experimental.dll" />
-        <file src="lib\portable-net45+netcore45+wpa81+wp8+MonoAndroid1+MonoTouch1\System.Reactive.Experimental.XML" target="lib\portable-net45+netcore45+wpa81+wp8+MonoAndroid1+MonoTouch1\System.Reactive.Experimental.XML" />
-        <file src="lib\portable-win81+wpa81\System.Reactive.Experimental.dll" target="lib\portable-win81+wpa81\System.Reactive.Experimental.dll" />
-        <file src="lib\portable-win81+wpa81\System.Reactive.Experimental.XML" target="lib\portable-win81+wpa81\System.Reactive.Experimental.XML" />
-        <file src="lib\sl5\System.Reactive.Experimental.dll" target="lib\sl5\System.Reactive.Experimental.dll" />
-        <file src="lib\sl5\System.Reactive.Experimental.XML" target="lib\sl5\System.Reactive.Experimental.XML" />
-        <file src="lib\windows8\System.Reactive.Experimental.dll" target="lib\windows8\System.Reactive.Experimental.dll" />
-        <file src="lib\windows8\System.Reactive.Experimental.XML" target="lib\windows8\System.Reactive.Experimental.XML" />
-        <file src="lib\windowsphone8\System.Reactive.Experimental.dll" target="lib\windowsphone8\System.Reactive.Experimental.dll" />
-        <file src="lib\windowsphone8\System.Reactive.Experimental.XML" target="lib\windowsphone8\System.Reactive.Experimental.XML" />
+        <file src="..\System.Reactive.Experimental\bin\$configuration$\**\*.*" target="lib" />
     </files>
 </package>
