--- a/Rx.NET/Source/NuSpecs/System.Reactive.Interfaces.nuspec
+++ b/Rx.NET/Source/NuSpecs/System.Reactive.Interfaces.nuspec
@@ -16,23 +16,6 @@
         <tags>Rx Reactive Extensions Observable LINQ Events</tags>
     </metadata>
     <files>
-        <file src="lib\net40\System.Reactive.Interfaces.dll" target="lib\net40\System.Reactive.Interfaces.dll" />
-        <file src="lib\net40\System.Reactive.Interfaces.XML" target="lib\net40\System.Reactive.Interfaces.XML" />
-        <file src="lib\net45\System.Reactive.Interfaces.dll" target="lib\net45\System.Reactive.Interfaces.dll" />
-        <file src="lib\net45\System.Reactive.Interfaces.XML" target="lib\net45\System.Reactive.Interfaces.XML" />
-        <file src="lib\net46\System.Reactive.Interfaces.dll" target="lib\net46\System.Reactive.Interfaces.dll" />
-        <file src="lib\net46\System.Reactive.Interfaces.XML" target="lib\net46\System.Reactive.Interfaces.XML" />
-        <file src="lib\portable-net40+sl5+win8+wp8\System.Reactive.Interfaces.dll" target="lib\portable-net40+sl5+win8+wp8\System.Reactive.Interfaces.dll" />
-        <file src="lib\portable-net40+sl5+win8+wp8\System.Reactive.Interfaces.XML" target="lib\portable-net40+sl5+win8+wp8\System.Reactive.Interfaces.XML" />
-        <file src="lib\portable-net45+netcore45+wpa81+wp8+MonoAndroid1+MonoTouch1\System.Reactive.Interfaces.dll" target="lib\portable-net45+netcore45+wpa81+wp8+MonoAndroid1+MonoTouch1\System.Reactive.Interfaces.dll" />
-        <file src="lib\portable-net45+netcore45+wpa81+wp8+MonoAndroid1+MonoTouch1\System.Reactive.Interfaces.XML" target="lib\portable-net45+netcore45+wpa81+wp8+MonoAndroid1+MonoTouch1\System.Reactive.Interfaces.XML" />
-        <file src="lib\portable-win81+wpa81\System.Reactive.Interfaces.dll" target="lib\portable-win81+wpa81\System.Reactive.Interfaces.dll" />
-        <file src="lib\portable-win81+wpa81\System.Reactive.Interfaces.XML" target="lib\portable-win81+wpa81\System.Reactive.Interfaces.XML" />
-        <file src="lib\sl5\System.Reactive.Interfaces.dll" target="lib\sl5\System.Reactive.Interfaces.dll" />
-        <file src="lib\sl5\System.Reactive.Interfaces.XML" target="lib\sl5\System.Reactive.Interfaces.XML" />
-        <file src="lib\windows8\System.Reactive.Interfaces.dll" target="lib\windows8\System.Reactive.Interfaces.dll" />
-        <file src="lib\windows8\System.Reactive.Interfaces.XML" target="lib\windows8\System.Reactive.Interfaces.XML" />
-        <file src="lib\windowsphone8\System.Reactive.Interfaces.dll" target="lib\windowsphone8\System.Reactive.Interfaces.dll" />
-        <file src="lib\windowsphone8\System.Reactive.Interfaces.XML" target="lib\windowsphone8\System.Reactive.Interfaces.XML" />
+        <file src="..\System.Reactive.Interfaces\bin\$configuration$\**\*.*" target="lib" />
     </files>
 </package>
