--- a/Rx.NET/Source/NuSpecs/System.Reactive.Providers.nuspec
+++ b/Rx.NET/Source/NuSpecs/System.Reactive.Providers.nuspec
@@ -24,4 +24,5 @@
     </metadata>
     <files>
         <file src="..\System.Reactive.Providers\bin\$configuration$\**\*.*" target="lib" />
+    </files>
 </package>
