--- a/Ix.NET/Source/NuSpecs/System.Interactive.Async.Providers.nuspec
+++ b/Ix.NET/Source/NuSpecs/System.Interactive.Async.Providers.nuspec
@@ -14,7 +14,14 @@
         <language>en-US</language>
         <tags>Ix Interactive Extensions Enumerable Async</tags>
         <dependencies>
+          <group>
             <dependency id="System.Interactive.Async" version="$version$" />
+          </group>  
+          <group targetFramework="netstandard1.0">
+            <dependency id="System.Interactive.Async" version="$version$" />
+            <dependency id="System.Linq.Expressions" version="4.0.11-rc2-24027" />
+            <dependency id="System.Linq.Queryable" version="4.0.1-rc2-24027" />
+          </group>
         </dependencies>
         <frameworkAssemblies>
             <frameworkAssembly assemblyName="System" targetFramework="net4" />
@@ -22,7 +29,7 @@
             <frameworkAssembly assemblyName="System.Core" targetFramework="net4" />
             <frameworkAssembly assemblyName="System.Core" targetFramework="sl5" />
         </frameworkAssemblies>
-    </metadata>
+    </metadata>  
     <files>
         <file src="..\System.Interactive.Async.Providers\bin\$configuration$\**\*.*" target="lib" />
     </files>
