--- a/Ix.NET/Source/NuSpecs/System.Interactive.Async.nuspec
+++ b/Ix.NET/Source/NuSpecs/System.Interactive.Async.nuspec
@@ -17,6 +17,11 @@
             <frameworkAssembly assemblyName="System" targetFramework="net4" />
             <frameworkAssembly assemblyName="System.Core" targetFramework="net4" />
         </frameworkAssemblies>
+        <dependencies>
+          <group targetFramework="netstandard1.0">
+            <dependency id="NETStandard.Library" version="1.5.0-rc2-24027" />
+          </group>
+        </dependencies>
     </metadata>
     <files>
         <file src="..\System.Interactive.Async\bin\$configuration$\**\*.*" target="lib" />        
