--- a/Rx.NET/Source/NuSpecs/System.Reactive.Core.nuspec
+++ b/Rx.NET/Source/NuSpecs/System.Reactive.Core.nuspec
@@ -15,8 +15,16 @@
         <language>en-US</language>
         <tags>Rx Reactive Extensions Observable LINQ Events</tags>
         <dependencies>
+          <group>          
             <dependency id="System.Reactive.Intefaces" version="$version$" />
-        </dependencies>
+          </group>
+          <group targetFramework="netstandard1.0">
+            <dependency id="System.Reactive.Intefaces" version="$version$" />
+            <dependency id="System.ComponentModel" version="4.0.1-rc2-24027" />
+            <dependency id="System.Diagnostics.Contracts" version="4.0.1-rc2-24027" />
+            <dependency id="System.Dynamic.Runtime" version="4.0.11-rc2-24027" />
+        </group>
+      </dependencies>
     </metadata>
     <files>
         <file src="..\System.Reactive.Core\bin\$configuration$\**\*.*" target="lib" />
