--- a/Rx.NET/Source/NuSpecs/System.Reactive.Linq.nuspec
+++ b/Rx.NET/Source/NuSpecs/System.Reactive.Linq.nuspec
@@ -15,10 +15,17 @@
         <language>en-US</language>
         <tags>Rx Reactive Extensions Observable LINQ Events</tags>
         <dependencies>
+          <group>
             <dependency id="System.Reactive.Interfaces" version="$version$" />
             <dependency id="System.Reactive.Core" version="$version$" />
+          </group>
+          <group targetFramework="netstandard1.0">
+            <dependency id="System.Reactive.Interfaces" version="$version$" />
+            <dependency id="System.Reactive.Core" version="$version$" />
+            <dependency id="System.Runtime.InteropServices.WindowsRuntime" version="4.0.1-rc2-24027" />
+          </group>
         </dependencies>
-    </metadata>
+    </metadata>  
     <files>
         <file src="..\System.Reactive.Linq\bin\$configuration$\**\*.*" target="lib" />
     </files>
