--- a/Rx.NET/Source/NuSpecs/System.Reactive.Providers.nuspec
+++ b/Rx.NET/Source/NuSpecs/System.Reactive.Providers.nuspec
@@ -15,7 +15,14 @@
         <language>en-US</language>
         <tags>Rx Reactive Extensions Observable LINQ Events</tags>
         <dependencies>
+          <group>
             <dependency id="System.Reactive" version="$version$" />
+          </group>
+          <group targetFramework="netstandard1.0">
+            <dependency id="System.Reactive" version="$version$" />
+            <dependency id="System.Linq.Queryable" version="4.0.1-rc2-24027" />
+            <dependency id="System.Reflection.Extensions" version="4.0.1-rc2-24027" />
+          </group>
         </dependencies>
         <frameworkAssemblies>
             <frameworkAssembly assemblyName="System" targetFramework="net4" />
