--- a/Rx.NET/Source/NuSpecs/System.Reactive.Core.nuspec
+++ b/Rx.NET/Source/NuSpecs/System.Reactive.Core.nuspec
@@ -19,7 +19,7 @@
             <dependency id="System.Reactive.Interfaces" version="$version$" />
           </group>
           <group targetFramework="netstandard1.0">
-            <dependency id="System.Reactive.Intefaces" version="$version$" />
+            <dependency id="System.Reactive.Interfaces" version="$version$" />
             <dependency id="System.ComponentModel" version="4.0.1-rc2-24027" />
             <dependency id="System.Diagnostics.Contracts" version="4.0.1-rc2-24027" />
             <dependency id="System.Dynamic.Runtime" version="4.0.11-rc2-24027" />
