--- a/Rx.NET/Source/NuGet.Config
+++ b/Rx.NET/Source/NuGet.Config
@@ -4,6 +4,7 @@
     <clear />
     <add key="Build Packages" value="https://www.myget.org/F/c037199d-41df-4567-b966-25ff65324688/api/v3/index.json" />
     <add key="NuGet.org" value="https://api.nuget.org/v3/index.json" />    
+    <add key="dotnet-core" value="https://dotnet.myget.org/F/dotnet-core/api/v3/index.json" />
   </packageSources>
   <disabledPackageSources>
      <clear />
