--- a/Rx.NET/Source/NuSpecs/System.Reactive.Core.nuspec
+++ b/Rx.NET/Source/NuSpecs/System.Reactive.Core.nuspec
@@ -24,6 +24,14 @@
             <dependency id="System.Diagnostics.Contracts" version="4.0.1-rc2-24027" />
             <dependency id="System.Dynamic.Runtime" version="4.0.11-rc2-24027" />
         </group>
+        <group targetFramework="netcoreapp1.0">
+            <dependency id="System.Reactive.Interfaces" version="$version$" />
+            <dependency id="System.ComponentModel" version="4.0.1-rc2-24027" />
+            <dependency id="System.Diagnostics.Contracts" version="4.0.1-rc2-24027" />
+            <dependency id="System.Dynamic.Runtime" version="4.0.11-rc2-24027" />
+            <dependency id="System.Threading.Thread" version="4.0.0-rc2-24027" />
+            <dependency id="System.Threading.ThreadPool" version="4.0.10-rc2-24027" />
+        </group>
       </dependencies>
     </metadata>
     <files>
