--- a/Rx.NET/Source/System.Reactive.Core/project.json
+++ b/Rx.NET/Source/System.Reactive.Core/project.json
@@ -132,6 +132,32 @@
         "System.Dynamic.Runtime": "4.0.11-rc2-24027"
       }
     },
+    "netcoreapp1.0": {
+      "buildOptions": {
+        "define": [
+          "NO_EVENTARGS_CONSTRAINT",
+          "HAS_EDI",
+          "HAS_WINRT",
+          "HAS_PROGRESS",
+          "HAS_TPL46",
+          "PREFER_ASYNC",
+          "HAS_AWAIT",
+          "HAS_APTCA",
+          "NO_REMOTING",
+          "NO_SERIALIZABLE",          
+          "CRIPPLED_REFLECTION",
+          "PLIB",
+          "USE_TIMER_SELF_ROOT"
+        ]
+      },
+      "dependencies": {
+        "System.ComponentModel": "4.0.1-rc2-24027",
+        "System.Diagnostics.Contracts": "4.0.1-rc2-24027",
+        "System.Dynamic.Runtime": "4.0.11-rc2-24027",
+        "System.Threading.Thread": "4.0.0-rc2-24027",
+        "System.Threading.ThreadPool": "4.0.10-rc2-24027"
+      }
+    },
     "sl5": {
       "buildOptions": {
         "define": [
