--- a/Ix.NET/Source/System.Interactive.Async.Providers/project.json
+++ b/Ix.NET/Source/System.Interactive.Async.Providers/project.json
@@ -1,10 +1,10 @@
 ﻿{
   "version": "2.0.0-*",
   "title": "Interactive Extensions - Async Providers Library",
-  "description":
-    "Interactive Extensions Async Providers Library used to build query providers and express queries over async enumerable sequences.",
+  "description": "Interactive Extensions Async Providers Library used to build query providers and express queries over async enumerable sequences.",
   "authors": ["Microsoft"],
   "copyright": "Copyright (C) Microsoft Corporation",
+  
   "packOptions": {
     "tags": ["Ix", "Interactive", "Extensions", "Enumerable", "Asynchronous"],
     "iconUrl": "http://go.microsoft.com/fwlink/?LinkId=261274",
@@ -16,6 +16,7 @@
   "dependencies": {
     "System.Interactive.Async": { "target": "project" }
   },
+  
   "frameworks": {
     "net40": {
       "buildOptions": {
