--- a/Ix.NET/Source/System.Interactive.Async/project.json
+++ b/Ix.NET/Source/System.Interactive.Async/project.json
@@ -1,10 +1,10 @@
 ﻿{
   "version": "2.0.0-*",
   "title": "Interactive Extensions - Async Library",
-  "description":
-    "Interactive Extensions Async Library used to express queries over asynchronous enumerable sequences.",
+  "description": "Interactive Extensions Async Library used to express queries over asynchronous enumerable sequences.",
   "authors": ["Microsoft"],
   "copyright": "Copyright (C) Microsoft Corporation",
+  
   "packOptions": {
     "tags": ["Ix", "Interactive", "Extensions", "Enumerable", "Asynchronous"],
     "iconUrl": "http://go.microsoft.com/fwlink/?LinkId=261274",
