--- a/Ix.NET/Source/System.Interactive.Providers/project.json
+++ b/Ix.NET/Source/System.Interactive.Providers/project.json
@@ -1,10 +1,10 @@
 ﻿{
   "version": "2.0.0-*",
   "title": "Interactive Extensions - Providers Library",
-  "description":
-    "Interactive Extensions Providers Library used to build query providers and express queries over enumerable sequences.",
+  "description": "Interactive Extensions Providers Library used to build query providers and express queries over enumerable sequences.",
   "authors": ["Microsoft"],
   "copyright": "Copyright (C) Microsoft Corporation",
+  
   "packOptions": {
     "tags": ["Ix", "Interactive", "Extensions", "Enumerable"],
     "iconUrl": "http://go.microsoft.com/fwlink/?LinkId=261274",
@@ -16,6 +16,7 @@
   "dependencies": {
     "System.Interactive": { "target": "project" }
   },
+  
   "frameworks": {
     "net40": {
       "buildOptions": {
