--- a/Rx.NET/Source/System.Reactive.Windows.Forms/project.json
+++ b/Rx.NET/Source/System.Reactive.Windows.Forms/project.json
@@ -1,8 +1,7 @@
 {
   "version": "3.0.0-*",
   "title": "Reactive Extensions - Windows Forms Helpers",
-  "description":
-    "Windows Forms extensions library for Rx. Contains scheduler functionality for the Windows Forms UI loop.",
+  "description": "Windows Forms extensions library for Rx. Contains scheduler functionality for the Windows Forms UI loop.",
   "authors": ["Microsoft"],
   "copyright": "Copyright (C) Microsoft Corporation",
 
@@ -19,6 +18,7 @@
     "publicSign": true,
     "define": ["SIGNED"]
   },
+  
   "configurations": {
     "ReleaseDelaySigned": {
       "buildOptions": {
@@ -29,10 +29,12 @@
       }
     }
   },
+  
   "dependencies": {
     "System.Reactive.Interfaces": { "target": "project" },
     "System.Reactive.Core": { "target": "project" }
   },
+  
   "frameworks": {
     "net40": {
       "buildOptions": {
