--- a/Rx.NET/Source/System.Reactive.WindowsRuntime/project.json
+++ b/Rx.NET/Source/System.Reactive.WindowsRuntime/project.json
@@ -1,10 +1,10 @@
 {
   "version": "3.0.0-*",
   "title": "Reactive Extensions - Windows Forms Helpers",
-  "description":
-    "Windows Forms extensions library for Rx. Contains scheduler functionality for the Windows Forms UI loop.",
+  "description": "Windows Forms extensions library for Rx. Contains scheduler functionality for the Windows Forms UI loop.",
   "authors": ["Microsoft"],
   "copyright": "Copyright (C) Microsoft Corporation",
+  
   "packOptions": {
     "tags": ["Rx", "Reactive", "Extensions", "Observable", "LINQ", "Events"],
     "iconUrl": "http://go.microsoft.com/fwlink/?LinkId=261274",
@@ -18,6 +18,7 @@
     "publicSign": true,
     "define": ["SIGNED"]
   },
+  
   "configurations": {
     "ReleaseDelaySigned": {
       "buildOptions": {
@@ -28,9 +29,11 @@
       }
     }
   },
+  
   "dependencies": {
     "System.Reactive.Linq": { "target": "project" }
   },
+  
   "frameworks": {
     "wpa81": {
       "buildOptions": {
