--- a/Ix.NET/Source/NuSpecs/System.Interactive.Async.Providers.nuspec
+++ b/Ix.NET/Source/NuSpecs/System.Interactive.Async.Providers.nuspec
@@ -29,8 +29,12 @@
         <dependency id="System.Runtime" version="4.1.0-rc2-24027" />
         <dependency id="System.Threading.Tasks" version="4.0.11-rc2-24027" />
       </group>
-      <group targetFramework="net40" />
-      <group targetFramework="net45" />
+      <group targetFramework="net40">
+        <dependency id="System.Interactive.Async" version="$version$" />
+      </group>
+      <group targetFramework="net45">
+        <dependency id="System.Interactive.Async" version="$version$" />
+      </group>
     </dependencies>
     <frameworkAssemblies>
       <frameworkAssembly assemblyName="System" targetFramework="net4" />
